--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Learn_RaytracingInOneWeek)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Learn_RaytracingInOneWeek main.cpp)
+add_executable(Learn_RaytracingInOneWeek main.cpp
+        vec3.h)
