using new class to create ppm image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(Learn_RaytracingInOneWeek)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Learn_RaytracingInOneWeek main.cpp
-        vec3.h)
+        vec3.h
+        color.h
+        color.cpp)
