--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Learn_RaytracingInOneWeek main.cpp
         vec3.h
         color.h
-        color.cpp)
+        color.cpp
+        Ray.h
+        Ray.cpp)
